[project]
name = "travel-bot"
version = "0.1.0"
description = "Travel Suggestion Bot: FastAPI service providing factual and creative travel suggestions and asynchronous itinerary generation using an LLM."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"fastapi>=0.95.0",
	"pydantic>=2.0",
	"python-dotenv>=1.0.0",
	"uvicorn[standard]>=0.22.0",
	"langchain_openai>=0.1.0"
]
